k8s/app2bootcamp.yaml
# Deploy usermgt springboot application
# deploy LoadBalancer svc for frontend usergmt app
# Deploy ClusterIP service for backend mongodb app
# deploy PVC using EBS-BLOCK-STORE  
# Deploy mongodb container
# Deploy ConfigMaps for mongo db
# Deploy secret to store confidential details (password, tokens & sshkeys)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      name: springapppod
      labels:
        app: springapp
    spec:
      containers:
      - name: springappcontainer
        image: mylandmarktech/spring-boot-mongo
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springapp
spec:
  selector:
    app: springapp
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
